# meshbool

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  main.zng
cpp/: CMakeLists.txt
cpp/include/meshbool/: manifold.h  polygon.h
cpp/manifold_wrapper/src/: meshIO.cpp
src/: boolean3.rs  boolean_result.rs  collider.rs  common.rs  constructors.rs  disjoint_sets.rs  edge_op.rs  face_op.rs  lib.rs  mesh.rs  mesh_fixes.rs  meshboolimpl.rs  multiset.rs  polygon.rs  polygon_internal.rs  properties.rs  shared.rs  smoothing.rs  sort.rs  subdivision.rs  test.rs  tri_dis.rs  utils.rs  vec.rs
test/: README.md  test.zng
