[package]
name = "meshbool"
version = "0.0.0"
edition = "2024"
rust-version = "1.91"

[lib]
crate-type = ["staticlib"]

[features]
test = ["dep:zngur", "dep:build-rs"]

#in original manifold, assertions are only used for tests.
#the test suite cmake file forces debug assertions back on
[profile.dev.package.meshbool]
debug-assertions = false

[dependencies]
libm = { version = "0.2", default-features = false }
nalgebra = { version = "0.34", default-features = false, features = ["std", "libm-force"] }
intrusive-collections = { git = "https://github.com/BorgerLand/vandalized-intrusive-rs" }

[build-dependencies]
zngur = { version = "0.10", optional = true }
build-rs = { version = "0.3", optional = true}
